update inaction feedback author websites

--- a/inactionfeedback.html
+++ b/inactionfeedback.html
@@ -108,30 +108,30 @@
             <p class="lead"><a href="http://ejane.me/" class="authorname" target="_blank">Jane L. E</a><br>UCSD</p>
           </div>
           <div class="col-sm-2 author">
-            <p class="lead"><a href="" class="authorname" target="_blank">Yu-Chun Grace Yen</a><br>NYCU</p>
+            <p class="lead"><a href="https://gracetfg2.github.io/" class="authorname" target="_blank">Yu-Chun Grace Yen</a><br>NYCU</p>
           </div>
           <div class="col-sm-2 author">
-            <p class="lead"><a href="" class="authorname" target="_blank">Isabelle Yan Pan</a><br>UCSD</p>
+            <p class="lead"><a href="https://isapan7.wixsite.com/portfolio" class="authorname" target="_blank">Isabelle Yan Pan</a><br>UCSD</p>
           </div>
           <div class="col-sm-2 author">
-            <p class="lead"><a href="" class="authorname" target="_blank">Grace Lin</a><br>UCSD</p>
+            <p class="lead"><a href="https://www.graceerya.com/" class="authorname" target="_blank">Grace Lin</a><br>UCSD</p>
           </div>
           <div class="col-sm-2 author">
-            <p class="lead"><a href="" class="authorname" target="_blank">Mingyi Li</a><br>UCSD</p>
+            <p class="lead"><a href="https://mingyili.me/" class="authorname" target="_blank">Mingyi Li</a><br>UCSD</p>
           </div>
         </div>
         <div class="row col-sm-offset-3">
           <div class="col-sm-2 author">
-            <p class="lead"><a href="" class="authorname" target="_blank">Hyoungwook Jin</a><br>KAIST</p>
+            <p class="lead"><a href="https://jhw123.github.io/" class="authorname" target="_blank">Hyoungwook Jin</a><br>KAIST</p>
           </div>
           <div class="col-sm-2 author">
-            <p class="lead"><a href="" class="authorname" target="_blank">Mengyi Chen</a><br>UCSD</p>
+            <p class="lead"><a href="https://www.linkedin.com/in/crystal-mengyi-chen-90606a255/" class="authorname" target="_blank">Mengyi Chen</a><br>UCSD</p>
           </div>
           <div class="col-sm-2 author">
-            <p class="lead"><a href="" class="authorname" target="_blank">Haijun Xia</a><br>UCSD</p>
+            <p class="lead"><a href="https://creativity.ucsd.edu/haijunxia" class="authorname" target="_blank">Haijun Xia</a><br>UCSD</p>
           </div>
           <div class="col-sm-2 author">
-            <p class="lead"><a href="" class="authorname" target="_blank">Steven P. Dow</a><br>UCSD</p>
+            <p class="lead"><a href="https://spdow.ucsd.edu/" class="authorname" target="_blank">Steven P. Dow</a><br>UCSD</p>
           </div>
         </div>
 
