inaction feedback: separate out code from other supplemental

--- a/inactionfeedback.html
+++ b/inactionfeedback.html
@@ -80,7 +80,7 @@
   <body>
 
     <div class="container">
-        <nav class="col-sm-offset-2">
+        <nav>
           <div class="col-sm-2 text-center">
             <a class="active" href="#abstract">abstract</a>
           </div>
@@ -89,6 +89,9 @@
           </div>
           <div class="col-sm-2 text-center">
             <a href="#supplementary">supplementary</a>
+          </div>
+          <div class="col-sm-2 text-center">
+            <a href="#code">code</a>
           </div>
           <div class="col-sm-2 text-center">
             <a href="#videos">videos</a>
@@ -163,8 +166,12 @@
           <h3>Supplementary Material &nbsp;
             <a href="inactionfeedback/supplemental.zip" class="headinglink" download> Download All</a> | 
             <a href="inactionfeedback/supplemental/userstudy/userstudy.html" class="headinglink"> User Study Designs</a> | 
-            <a href="inactionfeedback/supplemental/feedbacktemplate/design principles - template.pdf" class="headinglink"> Feedback Template</a> | 
-            <a href="https://github.com/littlejanee/when_to_give_feedback" class="headinglink"> Code</a>
+            <a href="inactionfeedback/supplemental/feedbacktemplate/design principles - template.pdf" class="headinglink"> Feedback Template</a>
+          </h3>
+        </div>
+        <div id="code">
+          <h3>Code &nbsp;
+            <a href="https://github.com/littlejanee/when_to_give_feedback" class="headinglink"> Github</a>
           </h3>
         </div>
 
