link project page

--- a/inactionfeedback.html
+++ b/inactionfeedback.html
@@ -94,7 +94,7 @@
             <a href="#code">code</a>
           </div>
           <div class="col-sm-2 text-center">
-            <a href="#videos">videos</a>
+            <a href="#videos">video</a>
           </div>
           <div class="col-sm-2 text-center">
             <a href="#bibtex">bibtex</a>
@@ -171,7 +171,7 @@
         </div>
         <div id="code">
           <h3>Code &nbsp;
-            <a href="https://github.com/littlejanee/when_to_give_feedback" class="headinglink"> Github</a>
+            Github (Coming Soon)
           </h3>
         </div>
 
