--- a/inactionfeedback.html
+++ b/inactionfeedback.html
@@ -186,11 +186,12 @@
         <div id="bibtex">
           <h3>Bibtex</h3>
             <pre class="id">
-@inproceedings{e2024when,
+@inproceedings{e2024feedback,
     author = {E, Jane L. and Yen, Yu-Chun Grace and Pan, Isabelle Yan and Lin, Grace and Li, Mingyi and Jin, Hyoungwook and Chen, Mengyi and Xia, Haijun and Dow, Steven P.},
     title = {When to Give Feedback: Exploring Tradeoffs in the Timing of Design Feedback},
-    doi = {TBD},
-    url = {TBD},
+    booktitle = {Proceedings of the 16th Annual ACM Conference on Creativity and Cognition},
+    url = {https://doi.org/10.1145/3635636.3656183},
+    doi = {10.1145/3635636.3656183},
     venue = {Creativity & Cognition},
     year = {2024},
 }</pre>
