--- a/inactionfeedback.html
+++ b/inactionfeedback.html
@@ -158,20 +158,20 @@
 
         <div id="paper">
           <h3>Paper &nbsp;
-            <a href="assets/pdf/papers/e2024timing_preprint.pdf" class="headinglink"> Preprint PDF</a>
+            <a href="assets/pdf/papers/e2024timing_preprint.pdf" class="headinglink" target="_blank"> Preprint PDF</a>
           </h3>
         </div>
 
         <div id="supplementary">
           <h3>Supplementary Material &nbsp;
             <a href="inactionfeedback/supplemental.zip" class="headinglink" download> Download All</a> | 
-            <a href="inactionfeedback/supplemental/userstudy/userstudy.html" class="headinglink"> User Study Designs</a> | 
-            <a href="inactionfeedback/supplemental/feedbacktemplate/design principles - template.pdf" class="headinglink"> Feedback Template</a>
+            <a href="inactionfeedback/supplemental/userstudy/userstudy.html" class="headinglink" target="_blank"> User Study Designs</a> | 
+            <a href="inactionfeedback/supplemental/feedbacktemplate/design principles - template.pdf" class="headinglink" target="_blank"> Feedback Template</a>
           </h3>
         </div>
         <div id="code">
-          <h3>Code &nbsp;
-            Github (Coming Soon)
+          <h3>Code &nbsp; 
+            <a href="https://github.com/littlejanee/when_to_give_feedback" class="headinglink" target="_blank"> Github</a>
           </h3>
         </div>
 
