update inaction feedback paper to non-preprint

--- a/inactionfeedback.html
+++ b/inactionfeedback.html
@@ -158,7 +158,7 @@
 
         <div id="paper">
           <h3>Paper &nbsp;
-            <a href="assets/pdf/papers/e2024timing_preprint.pdf" class="headinglink" target="_blank"> Preprint PDF</a>
+            <a href="assets/pdf/papers/e2024timing.pdf" class="headinglink" target="_blank"> PDF</a>
           </h3>
         </div>
 
