add pre/post tests and survey to study materials

--- a/inactionfeedback.html
+++ b/inactionfeedback.html
@@ -62,7 +62,7 @@
       .authorname {
         font-weight: 400;
       }
-      .abstract {
+      .bodytext {
         font-size: 1.3em;
       }
       .caption {
@@ -150,7 +150,7 @@
         <div id="abstract" class="row">
           <div class="col-sm-12">
             <h3>Abstract</h3>
-            <p class="lead abstract">
+            <p class="lead bodytext">
               Advances in AI have opened up the potential for creativity tools to computationally generate design feedback. In a future when designers can request feedback anytime on demand, how would the timing of these requests impact novices’ creative learning processes? What are the tradeoffs of providing access to feedback <i>throughout</i> a design task (<b>in-action feedback</b>) versus only providing feedback <i>after</i> (<b>on-action feedback</b>)? We explored these questions through a Wizard-of-Oz study (N=20) using an interactive design probe, where participants could request feedback either throughout the design process or only after they complete a full draft. We found that in-action participants frequently request feedback, resulting in better improvements as indicated by a greater decrease in issues in their final design. However, we saw that in-action feedback can also risk users overly relying on feedback instead of engaging in more holistic self-evaluation. We discuss the implications of our insights on designing tools for creative feedback.
             </p>
           </div>
@@ -166,8 +166,10 @@
           <h3>Supplementary Material &nbsp;
             <a href="inactionfeedback/supplemental.zip" class="headinglink" download> Download All</a> | 
             <a href="inactionfeedback/supplemental/userstudy/userstudy.html" class="headinglink" target="_blank"> User Study Designs</a> | 
-            <a href="inactionfeedback/supplemental/feedbacktemplate/design principles - template.pdf" class="headinglink" target="_blank"> Feedback Template</a>
-          </h3>
+            <a href="inactionfeedback/supplemental/feedbacktemplate/design principles - template.pdf" class="headinglink" target="_blank"> Feedback Template</a></h3>
+            <p class="lead bodytext">
+              Materials included here include all user study materials, a website showcasing participant designs (User Study Designs), as well as the design principle references both for participants and experimenters (Feedback Template).
+            </p>
         </div>
         <div id="code">
           <h3>Code &nbsp; 
