add json files for when to give feedback

--- a/inactionfeedback/supplemental/userstudy/userstudy.html
+++ b/inactionfeedback/supplemental/userstudy/userstudy.html
@@ -19,7 +19,7 @@
 	<br><br>
 	<div class="description">
 		These are participants' designs from our user study. 
-		Participants' initial 'skeleton' designs and final designs are pictured alongside issues identified in the designs.
+		Participants' initial 'skeleton' designs and final designs are pictured alongside issues identified in the designs. Dataset of JSON files can we downloaded <a href="json.zip" class="headinglink" download>here</a>.
 		See paper for more details.
 		<br><br>
 		Download user study materials
