update github link

--- a/vizcrit.html
+++ b/vizcrit.html
@@ -222,7 +222,7 @@ their design awareness.
         <div id="code">
           <h3>Code &nbsp; 
             <!-- Replace with your repository URL -->
-            <a href="https://github.com/your-username/your-project-repo" class="headinglink" target="_blank"> Github</a>
+            <a href="https://github.com/mingyi09/VizCrit" class="headinglink" target="_blank"> Github</a>
           </h3>
         </div>
 
